testsuite/tests/typecheck/should_fail/tcfail016.alan
param_def() : proc
  foo(i : int) : proc
    i : byte[10];
  {}
{}
